modules/cli/src/test/resources/bad/disamb/modules/Modules04d.scr
module bad.disamb.modules.Modules04d;


import bad.disamb.modules.pack1.Foo1 as Foo;
import bad.disamb.modules.pack1.Foo2 as Foo;


